--- a/ES6/index.html
+++ b/ES6/index.html
@@ -40,7 +40,7 @@
         // });
         // console.log([...arr3,...arr4])
 
-        let oMp = new Map([['name','yang'],['nam','yang']]);
+        //let oMp = new Map([['name','yang'],['nam','yang']]);11111
     </script>
 </body>
 
