--- a/ES6/set-map.html
+++ b/ES6/set-map.html
@@ -40,7 +40,11 @@
         // });
         // console.log([...arr3,...arr4])
 
-        //let oMp = new Map([['name','yang'],['nam','yang']]);11111
+        //let oMp = new Map([['name','yang'],['nam','yang']]);
+
+
+        //Promise
+
     </script>
 </body>
 
